# Socket-based-HTTP-protocol

./: CMakeLists.txt  README.md  file_system_functionalities.cpp  file_system_functionalities.h  main.cpp  makefile  parsing_functionalities.cpp  parsing_functionalities.h  server.h  test.cpp
additional_src/: echo-client.cpp  test.cpp
src/: echo-client.cpp  err.cpp  err.h  file_system_functionalities.cpp  file_system_functionalities.h  main.cpp  parsing_functionalities.cpp  parsing_functionalities.h  request_answer.cpp  request_answer.h  server.cpp  server.h  test.cpp
